--- a/miniprogram/pages/login/login.wxml
+++ b/miniprogram/pages/login/login.wxml
@@ -3,21 +3,21 @@
  <view class="login-icon"> 
  <image class="login-img" src="/images/background.png"></image> 
  </view> 
+
  <view class="login-from"> 
- 
- <!--账号-->
+  <!--账号-->
  <view class="inputView"> 
   <image class="nameImage" src="/images/name.png"></image> 
-  <label class="loginLab">账号</label> 
-  <input class="inputText" placeholder="请输入账号" bindinput="usernameInput" /> 
+  <label class="loginLab">身份证号</label> 
+  <input class="inputText" placeholder="请输入身份证号" bindinput="usernameInput" /> 
  </view> 
  <view class="line"></view> 
  
  <!--密码-->
  <view class="inputView"> 
   <image class="keyImage" src="/images/password.png"></image> 
-  <label class="loginLab">密码</label> 
-  <input class="inputText" password="true" placeholder="请输入密码" bindinput="passwordInput" /> 
+  <label class="loginLab">登录密码</label> 
+  <input class="inputText" password="true" placeholder="请输入登录密码" bindinput="passwordInput" /> 
  </view> 
  
  <!--按钮-->
