--- a/miniprogram/pages/login/login.wxml
+++ b/miniprogram/pages/login/login.wxml
@@ -1,4 +1,4 @@
-<view class="container"> 
+<view class="login-container"> 
  
  <view class="login-icon"> 
  <image class="login-img" src="/images/background.png"></image> 
