--- a/miniprogram/pages/login/login.wxss
+++ b/miniprogram/pages/login/login.wxss
@@ -2,7 +2,7 @@ page{
   height: 100%; 
  } 
   
- .container { 
+ .login-container { 
   height: 100%; 
   display: flex; 
   flex-direction: column; 
