--- a/miniprogram/pages/time/time.wxml
+++ b/miniprogram/pages/time/time.wxml
@@ -7,6 +7,8 @@
  <view class="line"></view> 
  <view class="loginBtnView"> 
    <button class="loginBtn" type="primary" size="{{primarySize}}" loading="{{loading}}" plain="{{plain}}" disabled="{{disabled}}" bindtap="query">查询</button> 
+   <loading hidden="{{hiddenLoading}}">加载中... </loading>
+
  </view> 
  </view> 
 
