--- a/miniprogram/pages/login/login.wxss
+++ b/miniprogram/pages/login/login.wxss
@@ -2,7 +2,7 @@ page{
   height: 100%; 
  } 
   
- .container { 
+ .login-container { 
   height: 100%; 
   display: flex; 
   flex-direction: column; 
@@ -60,12 +60,11 @@ page{
   margin-top: 15px; 
  } 
   
- /* .line { 
-  width: 100%; 
+ .line0 { 
+
   height: 1px; 
-  background-color: #cccccc; 
-  margin-top: 1px; 
- }  */
+  background-color: #cccccc
+ }  
   
  /*按钮*/
  .loginBtnView { 
@@ -81,4 +80,12 @@ page{
   width: 90%; 
   margin-top: 40px; 
   border-radius:10px;
+ }
+
+ .logo>text{
+  display: block;
+  font-size: 12px;
+  text-align: center;  
+  margin-bottom: 20px;
+  color: #979494;
  }
