--- a/miniprogram/pages/login/login.wxml
+++ b/miniprogram/pages/login/login.wxml
@@ -1,7 +1,7 @@
 <view class="login-container"> 
  
  <view class="login-icon"> 
- <image class="login-img" src="/images/background.png"></image> 
+ <image class="login-img" src="/images/background-new.png"></image> 
  </view> 
 
  <view class="login-from"> 
@@ -19,12 +19,16 @@
   <label class="loginLab">登录密码</label> 
   <input class="inputText" password="true" placeholder="请输入登录密码" bindinput="passwordInput" /> 
  </view> 
- 
+
  <!--按钮-->
  <view class="loginBtnView"> 
   <button class="loginBtn" type="primary" size="{{primarySize}}" loading="{{loading}}" plain="{{plain}}" disabled="{{disabled}}" bindtap="login">登录</button> 
  </view> 
+
+  <!--忘记密码-->
+  <button class="forgetBtn" hover-class="none" bindtap="forget">忘记密码？</button>
  </view> 
+
 
  <!--出品-->
  <view class="logo"> <text>—— 智能控制技术室出品 ——</text></view>
