--- a/miniprogram/pages/result/result.wxss
+++ b/miniprogram/pages/result/result.wxss
@@ -23,6 +23,12 @@ page{
   font-size: 14px;
   color: #8d8787; 
 }
+.text3{
+  float: right; 
+  text-align: right; 
+  font-size: 16px;
+  color: #db6131; 
+}
 .result-box1>text{
   font-size: 14px;
   color: #000000; 
@@ -48,3 +54,13 @@ page{
   font-size: 14px;
   color: #000000; 
 } 
+.result-box33{
+  display: flex; 
+}
+.result-box3-1{
+  width: 50%;
+}
+.result-box3-2{
+  width: 50%;
+  margin-left: 4px;
+}
