--- a/miniprogram/pages/result/result.wxml
+++ b/miniprogram/pages/result/result.wxml
@@ -16,7 +16,6 @@
   <view class="result-box3-1">
     <view><text>岗位工资 </text> <text class="text2">{{post_wage}} </text></view>
     <view><text>保密津贴 </text> <text class="text2">{{secrecy}} </text></view>
-    <view><text>提租补贴 </text> <text class="text2">{{rate}} </text></view>
     <view><text>调整项 </text> <text class="text2">{{adjustment}} </text></view>
     <view><text>专项奖励 </text> <text class="text2">{{award}} </text></view>
     <view><text>绩效工资 </text> <text class="text2">{{performance_wage}} </text></view>
@@ -30,7 +29,8 @@
     <view><text>生育津贴 </text> <text class="text2">{{maternity}} </text></view>
     <view><text>独生子女 </text> <text class="text2">{{one_child}} </text></view>
     <view><text>住房补贴 </text> <text class="text2">{{housing}} </text></view>
-    <view><text>应发工资 </text> <text class="text3">{{before_tax}} </text></view>
+    <view><text class="text4">应发工资 </text> </view>
+    <view><text class="text3">{{before_tax}} </text></view>
   </view>
   <view class="result-box3-2">
     <view><text>养老保险 </text> <text class="text2">{{endowment_insurance}} </text></view>
@@ -43,7 +43,8 @@
     <view><text>大额医疗 </text> <text class="text2">{{large_medical}} </text></view>
     <view><text>宿舍房租 </text> <text class="text2">{{dormitory}} </text></view>
     <view><text>企业年金 </text> <text class="text2">{{supplementary_pension}} </text></view>
-    <view><text>扣除总计 </text> <text class="text3">{{kouchu}} </text></view>
+    <view><text class="text4">扣除总计 </text> </view>
+    <view><text class="text3">{{kouchu}} </text></view>
   </view>
 </view>
   </view>
